@@ -14,6 +14,7 @@
  - Osm Hiking maps removed (excluding the "Wanderreitkarte Abo" version)
  - Outdooractive.com maps removed as requested by map provider
  + New map source: OpenStreetMap MapQuest
+ + New map source: OpenStreetMap Bing layer (Mapnik powered by Microsoft)
  + New custom map source type: reading tiles offline from an OSMTracker/AndNav/
     BackCountry Navigator/Maverick/OSMAND atlas (from file system)  
 
